GreaseMonkey - Check content type of url *.user.js

- Do not stop loading the page with url matching user script
- Only match clicked links

BUG: 467459

Signed-off-by: Juraj Oravec <jurajoravec@mailo.com>